# BasicDeformationApp

./: .gitignore  .gitmodules  BasicDeformationApp.sln  BasicDeformationApp.vcxproj  BasicDeformationApp.vcxproj.filters  CMakeLists.txt
src/: ConstraintsPositional.cpp  DistortionSymmetricDirichlet.cpp  DistortionSymmetricDirichlet.h  EigenSparseSolver.cpp  EigenSparseSolver.h  EigenTypes.h  Energy.cpp  Energy.h  EnergySymDir.cpp  EnergySymDir.h  GizmoMenu.h  Newton.cpp  Newton.h  ObjectiveFunction.cpp  ObjectiveFunction.h  Solver.cpp  Solver.h  SolverPlugin.cpp  SolverPlugin.h  SolverWrapper.cpp  SolverWrapper.h  TotalObjective.cpp  TotalObjective.h  Utils.h  main.cpp
